--- a/curso/css/index.html
+++ b/curso/css/index.html
@@ -21,9 +21,9 @@
     <nav>
         <ul>
             <li>
-            INCIO <a href="index.html"></a>
+            <a href="index.html">INICIO </a>
             <li>
-             MENU   
+             <a href="index2.html"> MENU</a>   
             </li>
 
         </ul>
